# DaisyExamples

./: .clang-format  .gitignore  .gitmodules  Pictures - Shortcut.lnk  README.md  helper.py  rebuild_all.sh  rebuild_docs.sh  rebuild_examples.sh  rebuild_libs.sh
.github/workflows/: build.yml  fix_style.yml
MyProjects/arp/: .arp.cpp.swp  Makefile  arp.cpp
MyProjects/gain/: .gain.cpp.swp  Makefile  README.md  gain.cpp
MyProjects/lfo/: .Makefile.swp  .lfo.cpp.swp  Makefile  lfo.cpp
ci/: build_dist.py  build_examples.py  build_examples.sh  build_libs.sh  local_style_check.sh
core/: Makefile
cube/Daisy_Rev3/: .mxproject  ES_Daisy_Rev3.gpdsc  ES_Daisy_Rev3.ioc
cube/Daisy_Seed_Rev2_UART/: Daisy_Seed_Rev2-Release.vgdbsettings  Daisy_Seed_Rev2.gpdsc  Daisy_Seed_Rev2.ioc  Daisy_Seed_Rev2.vcxproj  Daisy_Seed_Rev2.vcxproj.filters  stm32.xml
cube/Daisy_Seed_Rev4/: .mxproject  Daisy_Seed_Rev2-Debug.vgdbsettings  Daisy_Seed_Rev2.gpdsc  Daisy_Seed_Rev2.ioc  Daisy_Seed_Rev2.vcxproj  Daisy_Seed_Rev2.vcxproj.filters  STM32H750IB_flash.lds  UartTest.sln  stm32.xml
field/FmTones/: .Makefile.swp  FmTones.cpp  FmTones.sln  Makefile  README.md
field/KeyboardTest/: KeyboardTest-Debug.vgdbsettings  KeyboardTest-Release.vgdbsettings  KeyboardTest.cpp  KeyboardTest.sln  KeyboardTest.vcxproj  KeyboardTest.vcxproj.filters  Makefile  README.md
field/Midi/: Makefile  Midi-Debug.vgdbsettings  Midi-Release.vgdbsettings  Midi.cpp  Midi.vcxproj  Midi.vcxproj.filters  README.md  stm32.xml
field/Nimbus/: Makefile  Nimbus.cpp  Nimbus.sln  README.md  buffer_allocator.h  nimbus.lds  parameter_interpolator.h
field/Sampler/: Makefile  README.md  Sampler.cpp  Sampler.sln  WavWriter.h  WaveTableLoader.h
field/chorus/: Makefile  README.md  chorus.cpp  chorus.sln
field/flanger/: Makefile  README.md  flanger.cpp
field/gain/: Makefile  README.md  gain.cpp
field/modalvoice/: Makefile  README.md  modalvoice.cpp
field/phaser/: Makefile  README.md  phaser.cpp
field/sampler/: Makefile  README.md  samplebuffer.h  sampler.cpp
field/stringvoice/: Makefile  README.md  stringvoice.cpp  stringvoice.sln
field/template/: Makefile  README.md  main.cpp
hardware_platforms/field/: README.md
hardware_platforms/pod/: README.md
legio/: README.md
legio/FMOscillator/: FMOscillator.cpp  Makefile  README.md
optic/HachiKit/: AhdEnv.cpp  AhdEnv.h  Bd8.cpp  Bd8.h  BitArray.cpp  BitArray.h  Blank.cpp  Blank.h  Ch.cpp  Ch.h  Clap.cpp  Clap.h  ClickSource.cpp  ClickSource.h  Cow8.cpp  Cow8.h  Cy.cpp  Cy.h  DigiClap.cpp  DigiClap.h  FmDrum.cpp  FmDrum.h  HachiKit.cpp  HhSource68.cpp  HhSource68.h  IDrum.h  ISource.h  Makefile  Oh.cpp  Oh.h  Param.h  README.md  Screen.cpp  Screen.h  Sd8.cpp  Sd8.h  SdNoise.cpp  SdNoise.h  Tom.cpp  Tom.h  (+1 more)
patch/: README.md
patch/BaseClassTest/: BaseClassTest.vcxproj  BaseClassTest.vcxproj.filters  Makefile
patch/ByteShift/: Makefile  README.md  bytebeat_synth.cpp  bytebeat_synth.h  byteshift.cpp  byteshift.h  control_manager.cpp  control_manager.h  main.cpp
patch/Compressor/: Compressor.cpp  Compressor.sln  Makefile  README.md
patch/DiyCosmos/: DiyCosmos.cpp  Makefile  README.md
patch/DiyDrezno/: DiyDrezno.cpp  DiyDrezno.sln  Makefile  README.md
patch/DiyMorphagene/: DiyMorphagene.cpp  Makefile  README.md
patch/DiyTDM/: DiyTDM.cpp  Makefile  README.md
patch/DiyTriptych/: DiyTriptych.cpp  DiyTriptych.sln  Makefile  README.md
patch/DrumLooper/: DrumLooper.cpp  Makefile  README.md
patch/EnvelopeOscillator/: EnvelopeOscillator.cpp  Makefile  README.md  envelope.h  oscillator.h  rebuild.sh  utils.h
patch/FilterBank/: FilterBank.cpp  FilterBank.sln  README.md
patch/Granny/: Granny.cpp  Granny.sln  Makefile  README.md
patch/Granooper/: Granooper.cpp  Granooper.sln  Makefile  README.md
patch/HarmonicOscillator/: Makefile  MorphOscillator.cpp  MorphOscillator.h  main-v1.cpp  main.cpp  ratios.h  vox.h
patch/HungryEFfect/: HungryEFfect.cpp  HungryEFfect.vcxproj  HungryEFfect.vcxproj.filters  Makefile  TestCallbacks.h
patch/Looper/: Looper.cpp  Looper.sln  README.md
patch/MidSideDistortion/: Makefile  MidSideDistortion.cpp  MidSideDistortion.sln  README.md
patch/Midi/: Makefile  Midi-Release.vgdbsettings  Midi.cpp  Midi.sln  Midi.vcxproj  README.md
patch/MultiDelay/: #README.md#  .#README.md  MultiDelay.cpp  MultiDelay.sln  README.md
patch/NNWaveshaperB/edge-impulse-sdk/cmake/zephyr/: CMakeLists.txt
patch/NNWaveshaperB/edge-impulse-sdk/porting/ethos-core-driver/: .clang-format  CMakeLists.txt  README.md
patch/NNWaveshaperB/edge-impulse-sdk/porting/ethos-core-driver/include/: ethosu_device.h  ethosu_driver.h  pmu_ethosu.h
patch/NNWaveshaperB/edge-impulse-sdk/porting/ethos-core-driver/src/: ethosu55_interface.h  ethosu_common.h  ethosu_config.h  ethosu_device.c  ethosu_driver.c  ethosu_pmu.c
patch/Nimbus/: 2  Makefile  (+23 more)
patch_sm/: README.md
petal/: README.md
utils/: README.md  copy_project.py  fix_style_examples.sh  gen_json_details.py
versio/: README.md
(+3117 files in other folders)
